MatlabGrammarParser.py
# Generated from MatlabGrammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MatlabGrammarParser ( Parser ):

    grammarFileName = "MatlabGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "':'", "','", 
                     "'+'", "'-'", "'~'", "'*'", "'/'", "'\\'", "'^'", "'<'", 
                     "'>'", "'&'", "'|'", "'='", "';'", "'.*'", "'.\\'", 
                     "'./'", "'.^'", "'break'", "'return'", "'function'", 
                     "'for'", "'while'", "'end'", "'global'", "'if'", "'clear'", 
                     "'else'", "'elseif'", "'<='", "'>='", "'=='", "'~='", 
                     "'transpose'", "'.''" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ARRAYMUL", "ARRAYDIV", "ARRAYRDIV", "ARRAYPOW", "BREAK", 
                      "RETURN", "FUNCTION", "FOR", "WHILE", "END", "GLOBAL", 
                      "IF", "CLEAR", "ELSE", "ELSEIF", "LE_OP", "GE_OP", 
                      "EQ_OP", "NE_OP", "TRANSPOSE", "NCTRANSPOSE", "STRING_LITERAL", 
                      "IDENTIFIER", "CONSTANT", "CR", "WS" ]

    RULE_file_ = 0
    RULE_primary_expression = 1
    RULE_postfix_expression = 2
    RULE_index_expression = 3
    RULE_index_expression_list = 4
    RULE_array_expression = 5
    RULE_unary_expression = 6
    RULE_unary_operator = 7
    RULE_multiplicative_expression = 8
    RULE_additive_expression = 9
    RULE_relational_expression = 10
    RULE_equality_expression = 11
    RULE_and_expression = 12
    RULE_or_expression = 13
    RULE_expression = 14
    RULE_assignment_expression = 15
    RULE_eostmt = 16
    RULE_statement = 17
    RULE_statement_list = 18
    RULE_identifier_list = 19
    RULE_global_statement = 20
    RULE_clear_statement = 21
    RULE_expression_statement = 22
    RULE_assignment_statement = 23
    RULE_array_element = 24
    RULE_array_list = 25
    RULE_selection_statement = 26
    RULE_elseif_clause = 27
    RULE_iteration_statement = 28
    RULE_jump_statement = 29
    RULE_translation_unit = 30
    RULE_func_ident_list = 31
    RULE_func_return_list = 32
    RULE_function_declare_lhs = 33
    RULE_function_declare = 34

    ruleNames =  [ "file_", "primary_expression", "postfix_expression", 
                   "index_expression", "index_expression_list", "array_expression", 
                   "unary_expression", "unary_operator", "multiplicative_expression", 
                   "additive_expression", "relational_expression", "equality_expression", 
                   "and_expression", "or_expression", "expression", "assignment_expression", 
                   "eostmt", "statement", "statement_list", "identifier_list", 
                   "global_statement", "clear_statement", "expression_statement", 
                   "assignment_statement", "array_element", "array_list", 
                   "selection_statement", "elseif_clause", "iteration_statement", 
                   "jump_statement", "translation_unit", "func_ident_list", 
                   "func_return_list", "function_declare_lhs", "function_declare" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    ARRAYMUL=20
    ARRAYDIV=21
    ARRAYRDIV=22
    ARRAYPOW=23
    BREAK=24
    RETURN=25
    FUNCTION=26
    FOR=27
    WHILE=28
    END=29
    GLOBAL=30
    IF=31
    CLEAR=32
    ELSE=33
    ELSEIF=34
    LE_OP=35
    GE_OP=36
    EQ_OP=37
    NE_OP=38
    TRANSPOSE=39
    NCTRANSPOSE=40
    STRING_LITERAL=41
    IDENTIFIER=42
    CONSTANT=43
    CR=44
    WS=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MatlabGrammarParser.EOF, 0)

        def statement_list(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Statement_listContext,0)


        def getRuleIndex(self):
            return MatlabGrammarParser.RULE_file_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_" ):
                listener.enterFile_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_" ):
                listener.exitFile_(self)




    def file_(self):

        localctx = MatlabGrammarParser.File_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 32993318536138) != 0):
                self.state = 70
                self.statement_list(0)


            self.state = 73
            self.match(MatlabGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primary_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MatlabGrammarParser.IDENTIFIER, 0)

        def CONSTANT(self):
            return self.getToken(MatlabGrammarParser.CONSTANT, 0)

        def STRING_LITERAL(self):
            return self.getToken(MatlabGrammarParser.STRING_LITERAL, 0)

        def expression(self):
            return self.getTypedRuleContext(MatlabGrammarParser.ExpressionContext,0)


        def array_list(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Array_listContext,0)


        def getRuleIndex(self):
            return MatlabGrammarParser.RULE_primary_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary_expression" ):
                listener.enterPrimary_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary_expression" ):
                listener.exitPrimary_expression(self)




    def primary_expression(self):

        localctx = MatlabGrammarParser.Primary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_primary_expression)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.match(MatlabGrammarParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(MatlabGrammarParser.CONSTANT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.match(MatlabGrammarParser.STRING_LITERAL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.match(MatlabGrammarParser.T__0)
                self.state = 79
                self.expression(0)
                self.state = 80
                self.match(MatlabGrammarParser.T__1)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 82
                self.match(MatlabGrammarParser.T__2)
                self.state = 83
                self.match(MatlabGrammarParser.T__3)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.match(MatlabGrammarParser.T__2)
                self.state = 85
                self.array_list(0)
                self.state = 86
                self.match(MatlabGrammarParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Postfix_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary_expression(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Primary_expressionContext,0)


        def array_expression(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Array_expressionContext,0)


        def postfix_expression(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Postfix_expressionContext,0)


        def TRANSPOSE(self):
            return self.getToken(MatlabGrammarParser.TRANSPOSE, 0)

        def NCTRANSPOSE(self):
            return self.getToken(MatlabGrammarParser.NCTRANSPOSE, 0)

        def getRuleIndex(self):
            return MatlabGrammarParser.RULE_postfix_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfix_expression" ):
                listener.enterPostfix_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostfix_expression" ):
                listener.exitPostfix_expression(self)



    def postfix_expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MatlabGrammarParser.Postfix_expressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_postfix_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 91
                self.primary_expression()
                pass

            elif la_ == 2:
                self.state = 92
                self.array_expression()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 99
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = MatlabGrammarParser.Postfix_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfix_expression)
                        self.state = 95
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 96
                        self.match(MatlabGrammarParser.TRANSPOSE)
                        pass

                    elif la_ == 2:
                        localctx = MatlabGrammarParser.Postfix_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfix_expression)
                        self.state = 97
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 98
                        self.match(MatlabGrammarParser.NCTRANSPOSE)
                        pass

             
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Index_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MatlabGrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MatlabGrammarParser.RULE_index_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex_expression" ):
                listener.enterIndex_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex_expression" ):
                listener.exitIndex_expression(self)




    def index_expression(self):

        localctx = MatlabGrammarParser.Index_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_index_expression)
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(MatlabGrammarParser.T__4)
                pass
            elif token in [1, 3, 7, 8, 9, 41, 42, 43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.expression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Index_expression_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def index_expression(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Index_expressionContext,0)


        def index_expression_list(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Index_expression_listContext,0)


        def getRuleIndex(self):
            return MatlabGrammarParser.RULE_index_expression_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex_expression_list" ):
                listener.enterIndex_expression_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex_expression_list" ):
                listener.exitIndex_expression_list(self)



    def index_expression_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MatlabGrammarParser.Index_expression_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_index_expression_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.index_expression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MatlabGrammarParser.Index_expression_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_index_expression_list)
                    self.state = 111
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 112
                    self.match(MatlabGrammarParser.T__5)
                    self.state = 113
                    self.index_expression() 
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Array_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MatlabGrammarParser.IDENTIFIER, 0)

        def index_expression_list(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Index_expression_listContext,0)


        def getRuleIndex(self):
            return MatlabGrammarParser.RULE_array_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_expression" ):
                listener.enterArray_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_expression" ):
                listener.exitArray_expression(self)




    def array_expression(self):

        localctx = MatlabGrammarParser.Array_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_array_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MatlabGrammarParser.IDENTIFIER)
            self.state = 120
            self.match(MatlabGrammarParser.T__0)
            self.state = 121
            self.index_expression_list(0)
            self.state = 122
            self.match(MatlabGrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unary_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def postfix_expression(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Postfix_expressionContext,0)


        def unary_operator(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Unary_operatorContext,0)


        def getRuleIndex(self):
            return MatlabGrammarParser.RULE_unary_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary_expression" ):
                listener.enterUnary_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary_expression" ):
                listener.exitUnary_expression(self)




    def unary_expression(self):

        localctx = MatlabGrammarParser.Unary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_unary_expression)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 41, 42, 43]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.postfix_expression(0)
                pass
            elif token in [7, 8, 9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.unary_operator()
                self.state = 126
                self.postfix_expression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unary_operatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MatlabGrammarParser.RULE_unary_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary_operator" ):
                listener.enterUnary_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary_operator" ):
                listener.exitUnary_operator(self)




    def unary_operator(self):

        localctx = MatlabGrammarParser.Unary_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_unary_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 896) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Multiplicative_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary_expression(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Unary_expressionContext,0)


        def multiplicative_expression(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Multiplicative_expressionContext,0)


        def ARRAYMUL(self):
            return self.getToken(MatlabGrammarParser.ARRAYMUL, 0)

        def ARRAYDIV(self):
            return self.getToken(MatlabGrammarParser.ARRAYDIV, 0)

        def ARRAYRDIV(self):
            return self.getToken(MatlabGrammarParser.ARRAYRDIV, 0)

        def ARRAYPOW(self):
            return self.getToken(MatlabGrammarParser.ARRAYPOW, 0)

        def getRuleIndex(self):
            return MatlabGrammarParser.RULE_multiplicative_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicative_expression" ):
                listener.enterMultiplicative_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicative_expression" ):
                listener.exitMultiplicative_expression(self)



    def multiplicative_expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MatlabGrammarParser.Multiplicative_expressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_multiplicative_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.unary_expression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 161
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 159
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = MatlabGrammarParser.Multiplicative_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicative_expression)
                        self.state = 135
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 136
                        self.match(MatlabGrammarParser.T__9)
                        self.state = 137
                        self.unary_expression()
                        pass

                    elif la_ == 2:
                        localctx = MatlabGrammarParser.Multiplicative_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicative_expression)
                        self.state = 138
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 139
                        self.match(MatlabGrammarParser.T__10)
                        self.state = 140
                        self.unary_expression()
                        pass

                    elif la_ == 3:
                        localctx = MatlabGrammarParser.Multiplicative_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicative_expression)
                        self.state = 141
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 142
                        self.match(MatlabGrammarParser.T__11)
                        self.state = 143
                        self.unary_expression()
                        pass

                    elif la_ == 4:
                        localctx = MatlabGrammarParser.Multiplicative_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicative_expression)
                        self.state = 144
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 145
                        self.match(MatlabGrammarParser.T__12)
                        self.state = 146
                        self.unary_expression()
                        pass

                    elif la_ == 5:
                        localctx = MatlabGrammarParser.Multiplicative_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicative_expression)
                        self.state = 147
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 148
                        self.match(MatlabGrammarParser.ARRAYMUL)
                        self.state = 149
                        self.unary_expression()
                        pass

                    elif la_ == 6:
                        localctx = MatlabGrammarParser.Multiplicative_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicative_expression)
                        self.state = 150
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 151
                        self.match(MatlabGrammarParser.ARRAYDIV)
                        self.state = 152
                        self.unary_expression()
                        pass

                    elif la_ == 7:
                        localctx = MatlabGrammarParser.Multiplicative_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicative_expression)
                        self.state = 153
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 154
                        self.match(MatlabGrammarParser.ARRAYRDIV)
                        self.state = 155
                        self.unary_expression()
                        pass

                    elif la_ == 8:
                        localctx = MatlabGrammarParser.Multiplicative_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicative_expression)
                        self.state = 156
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 157
                        self.match(MatlabGrammarParser.ARRAYPOW)
                        self.state = 158
                        self.unary_expression()
                        pass

             
                self.state = 163
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Additive_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicative_expression(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Multiplicative_expressionContext,0)


        def additive_expression(self):
            return self.getTypedRuleContext(MatlabGrammarParser.Additive_expressionContext,0)


        def getRuleIndex(self):
            return MatlabGrammarParser.RULE_additive_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditive_expression" ):
                listener.enterAdditive_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditive_expression" ):
                listener.exitAdditive_expression(self)


